--- a/phaseportraitplots-test.ipynb
+++ b/phaseportraitplots-test.ipynb
@@ -96,7 +96,7 @@
     "    ydot[2] = - 3* + y[1] - y[2] / 10\n",
     "end\n",
     "initial = [1.0,0.0];                   # Initial conditions\n",
-    "t = float([0:0.01:50]);                # Time steps for solution\n",
+    "t = 0:0.01:50             # Time steps for solution\n",
     "xv = Sundials.cvode(oscillator, initial, t);\n",
     "xv[1:5,:]\n",
     "plot(t,xv[:,1],title=\"Mouvement\",\n",
